Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14904

Cannot select entries in L&E view for coredump

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 3.5.0
    • Qt Creator 3.5.0
    • Debugger
    • None
    • Windows 7
    • edb670b9563067d98a0a1bb81298854fcc08b124

      Right-clicking seems to work, but the tree items are not selectable (in both panes - Locals and Evaluated Expressions)

        For Gerrit Dashboard: QTCREATORBUG-14904
        # Subject Branch Project Status CR V

            hjk hjk
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes