Debugger: Make Locals views entries selectable for core files

Task-number: QTCREATORBUG-14904
Change-Id: I3918979c5f7a5dd3e4fbe9e3c7444f622e26b3f3
Reviewed-by: Orgad Shaneh <orgads@gmail.com>
Reviewed-by: Niels Weber <niels.weber@theqtcompany.com>